# Aayam

./: .gitignore  go.mod  pyproject.toml
benchmarks/go/vectors/: benchmark_operations_concurent_test.go  benchmark_operations_test.go  utils.go
benchmarks/python/vectors/: benchmark_operations_test.py
concurrency/: options.go
generators/: vector_addition.py
matrix/: concurrency.go  errors.go  float64.go  integer.go  model.go  operations.go  operations_test.go  options.go
utils/: assert.go  logger.go
vector/: errors.go  float64.go  integer.go  model.go  operations.go  operations_test.go  options.go  utils.go
